config/sidecar-gateway/004-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: kubecon-2025-eu
  name: kubecon-2025-eu-htproute
  namespace: otel-sidecar
spec:
  hostnames:
    - local.projectcontour.io
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: contour
      namespace: projectcontour
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: kubecon-2025-eu-service
          namespace: otel-sidecar
          port: 8000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /


cat <<EOF | kubectl apply -f -
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubecon-2025-eu-service
  namespace: otel-sidecar
spec:
  ingressClassName: istio
  rules:
    - host: kubecon-2025-eu-service.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubecon-2025-eu-service
                port:
                  number: 8000
EOF

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubecon-2025-eu-service
spec:
  ingressClassName: istio
  rules:
    - host: kubecon-2025-eu-service.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  number: 8000
