config/sidecar-gateway/004-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-sidecar-service
  namespace: otel-sidecar
spec:
  ingressClassName: istio
  rules:
    - host: otel-sidecar-service.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: otel-sidecar-service
                port:
                  number: 8000
